--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -29,6 +29,7 @@
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
     </style>
+
 </head>
 
 <body>
@@ -44,6 +45,28 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8">
+
+
+                <div class="card info-card mb-5">
+                    <div class="card-header bg-white">
+                        <h5 class="mb-0"><i class="bi bi-person-circle"></i>NickName</h5>
+                    </div>
+                    <div class="card-body">
+                        <div class="d-flex justify-content-between align-items-center mb-3">
+                            <form method="post" action="/alterar/nickname">
+                                <div class="form-group d-flex space-around">
+                                    <input type="text" name="id" hidden value="{{ id }}">
+                                    <input type="text" class="form-control" id="nickname" name="nickname" value="{{ nickname }}"
+                                        placeholder="Defina um nickname" required>
+
+                                    <button class="btn btn-success" type="submit">Salvar</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
+
                 <!-- Informações Básicas -->
                 <div class="card info-card mb-4">
                     <div class="card-header bg-white">
@@ -68,7 +91,6 @@
                     </div>
                 </div>
 
-                <!-- Sessão Ativa -->
                 <div class="card info-card">
                     <div class="card-header bg-white">
                         <h5 class="mb-0"><i class="bi bi-google me-2"></i>Sessão Google</h5>
@@ -92,8 +114,7 @@
                     <form method="post" action="/auth/deletar/conta">
                         <input type="text" value="{{ id  }}" name="id" hidden>
                         <button type="submit" class="btn btn-danger"
-                        onclick="return confirm('Tem certeza que deseja deletar a conta?');"
-                        >Deletar conta</button>
+                            onclick="return confirm('Tem certeza que deseja deletar a conta?');">Deletar conta</button>
                     </form>
                 </div>
             </div>
