--- a/views/contato.hbs
+++ b/views/contato.hbs
@@ -24,7 +24,7 @@
         <p class="lead">Envie sua dúvida, desafio ou sugestão enigmática</p>
       </div>
 
-      <form id="contactForm" action="/contato" method="POST">
+      <form id="contactForm" action="/enviar-email" method="POST">
         <div class="mb-3">
           <label for="name" class="form-label">Seu Nome</label>
           <input type="text" name="nome" class="form-control bg-dark text-light border-secondary" id="nome" required />
@@ -132,13 +132,13 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-<script>
+{{!-- <script>
   document.getElementById("contactForm").addEventListener("submit", function (e) {
     e.preventDefault();
     var modal = new bootstrap.Modal(document.getElementById("contactModal"));
     modal.show();
     this.reset();
   });
-</script>
+</script> --}}
 
 </body>
